# mm-activity-manager

./: .env.sample  .gitignore  README.md  docker-compose.sample.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker.yml
config/: default.crontab
runner/: Dockerfile
src/: main.py
