[project]
name = "mm-acitivity-manager"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Lukas Matuska", email = "matuska.lukas@lukasmatuska.cz"},
]
dependencies = ["requests>=2.32.3", "datetime>=5.5"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
